kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-one
spec:
  containers:
  - name: container-one
    image: registry.cluster.wik.cloud/public/echo 
    resources:
      limits:
        cpu: "500m"
        memory: "512Mi"
      requests:
        cpu: "100m"
        memory: "256Mi"
    ports:
    - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-three
  labels:
    appName: kube-three
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      appName: kube-three
  template:
    metadata:
      labels:
        appName: kube-three
    spec:
      containers:
      - name: container-three
        image: registry.cluster.wik.cloud/public/echo
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        ports:
        - containerPort: 8080
