service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-one
spec:
  selector:
    appName : kube-three
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
