ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-one
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.max
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-one
                port:
                  number: 80
